--- a/style.css
+++ b/style.css
@@ -573,9 +573,9 @@ nav {
     /* background-image: url("./section7-testimonials.png");
     background-repeat: repeat-x;
     background-position: center; */
-     background-image: url('./section7-testimonials.png');
-    background-repeat: repeat-x;  /* This makes the image repeat horizontally */
-    background-position: center;      /* Optional: Adjust the position if necessary */
+     background-image: url('./image_assets/section6-testimonials.png');
+    background-repeat: repeat-x;  
+    background-position: center;   
     /* height: 100px;       */
 }
 
@@ -583,6 +583,10 @@ nav {
     display: none;
     height: 50px;
     width: 70px;
+    /* width: 100%;
+    height: 100%;
+     background-repeat: repeat-x;  /* This makes the image repeat horizontally */
+    background-position: center; */
 
 }
 
