--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    /* border: none; */
 }
 
 html, body {
@@ -18,7 +19,7 @@ html, body {
 
 .wrapper {
     padding: 5px 5px;
-    border: 1px dashed red;
+    /* border: 1px dashed red; */
     width: 90%;
     min-height: 100%;
      display: flex;
@@ -32,7 +33,7 @@ html, body {
 }
 
 nav {
-    border: 1px dashed black;
+    /* border: 1px dashed black; */
     width: 90%;
     height: 7%;
     display: flex;
@@ -45,7 +46,7 @@ nav {
 }
 
 .nav-lists {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,7 +70,7 @@ nav {
 }
 
 .main-container {
-    border: 1px dashed black;
+    /* border: 1px dashed black; */
     width: 100%;
     min-height: 80%;
     display: flex;
@@ -83,7 +84,7 @@ nav {
 .mainContainer-Section {
 
     /* flex-wrap: wrap; */
-    border: 1px solid green;
+    /* border: 1px solid green; */
     width: 100%;
     height: 300px;
     display: flex;
@@ -184,7 +185,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .section-2-part1-items {
@@ -215,7 +216,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     flex-direction: row;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 70%;
     width: 100%;
     
@@ -224,7 +225,7 @@ nav {
 .section2-box {
     width: 20%;
     height: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     
 }
 
@@ -251,7 +252,7 @@ nav {
     flex-direction: row;
 }
 
-.section3-part1 {
+/* .section3-part1 {
     border: 1px solid black;
 }
 
@@ -263,7 +264,7 @@ nav {
 
 .section3-part3 {
     border: 1px solid black;
-}
+} */
 
 .section3-parts{
     width: 35%;
@@ -278,7 +279,7 @@ nav {
 
 .section3-part2COntainer{
    width: 1px;
-    border: 1px dashed  red;
+    /* border: 1px dashed  red; */
      display: flex;
     justify-content: center;
     align-items: center;
@@ -289,14 +290,14 @@ nav {
 .section3-part2-box {
     width: 20px;
     height: 20px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 100%;
     background-color: black;
     padding: 5px 5px;
 }
 
 .section3-part2-box1 {
-    border: 1px dashed black;
+    /* border: 1px dashed black; */
     border-radius: 50%;
     background-color: white;
     padding: 5px 5px;
@@ -305,14 +306,14 @@ nav {
 }
 
 .section3-part2-box2 {
-    border: 1px dashed black;
+    /* border: 1px dashed black; */
     background-color: white;
     border-radius: 50%;
     padding: 5px 5px;
 }
 
 .section3-part2-box3 {
-    border: 1px dashed black;
+    /* border: 1px dashed black; */
     background-color: white;
     border-radius: 50%;
     padding: 5px 5px;
@@ -343,7 +344,7 @@ nav {
 .section4-parts {
     width: 30%;
     height: 80%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .section4-image {
@@ -392,7 +393,7 @@ nav {
 } 
 
 .section5-part1 {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 70%;
     height: 100%;
     display: flex;
@@ -483,7 +484,7 @@ nav {
 }
 
 .section5-part4-project-list {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 80%;
     list-style: none;
     display: flex;
@@ -586,7 +587,7 @@ nav {
     /* width: 100%;
     height: 100%;
      background-repeat: repeat-x;  /* This makes the image repeat horizontally */
-    background-position: center; */
+    background-position: center; 
 
 }
 
@@ -623,6 +624,12 @@ nav {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
+.section7-part2-form {
+    width: 100%;
+    height: 100%;
+
+}
+
 .section7-part2-img {
     width: 50px;
     height: 100%;
@@ -631,12 +638,16 @@ nav {
 .section7-part2-email {
     width: 70%;
     height: 100%;
+    padding: 5px 5px;
 }
 
 .section7-part2-button {
     border: none;
     width: 45px;
     height: 100%;
+    cursor: pointer;
+    background-color: orange;
+    color: white;
 }
 .section7-part3 {
     display: flex;
@@ -815,7 +826,7 @@ footer {
 
 .mdediaConnect-lists {
     width: 70%;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -881,9 +892,3 @@ footer {
     cursor: pointer;
 }
 
-/* .fC-box1 {
-    border: 1px solid black;
-    min-width: 500px;
-    background-color: black;
-    color: white;
-} */
