--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ nav {
 
 .section3-part2COntainer{
    width: 1px;
-    /* border: 1px dashed  red; */
+    border: 1px dashed  grey;
      display: flex;
     justify-content: center;
     align-items: center;
@@ -297,7 +297,7 @@ nav {
 }
 
 .section3-part2-box1 {
-    /* border: 1px dashed black; */
+    border: 1px dashed black;
     border-radius: 50%;
     background-color: white;
     padding: 5px 5px;
@@ -306,29 +306,35 @@ nav {
 }
 
 .section3-part2-box2 {
-    /* border: 1px dashed black; */
+    border: 1px dashed black;
     background-color: white;
     border-radius: 50%;
     padding: 5px 5px;
 }
 
 .section3-part2-box3 {
-    /* border: 1px dashed black; */
+    border: 1px dashed black;
     background-color: white;
     border-radius: 50%;
     padding: 5px 5px;
 }
 
 .section3-part2-cercle1 {
-    background-color: blue;
+    background-color: orange;
+    border: 1px dashed black;
+    
 }
 
 .section3-part2-cercle2 {
-    background-color: yellow;
+    background-color: black;
+     border: 1px dashed black;
+     
 }
 
 .section3-part2-cercle3 {
-    background-color: blue;
+    background-color: orange;
+     border: 1px dashed black;
+    
 }
 
 
@@ -374,8 +380,9 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     text-align: start;
+    font-weight: bold;
 }
 
 
@@ -617,7 +624,7 @@ nav {
     padding: 5px 5px;
     border-radius: 50px;
     display: flex;
-    width: 40%;
+    width: 60%;
     justify-content: center;
     align-items: center;
     gap: 5px;
@@ -632,21 +639,22 @@ nav {
 
 .section7-part2-img {
     width: 50px;
-    height: 100%;
+    height: 70%;
 }
 
 .section7-part2-email {
     width: 70%;
-    height: 100%;
+    height: 50%;
     padding: 5px 5px;
 }
 
 .section7-part2-button {
     border: none;
-    width: 45px;
-    height: 100%;
+    width: 60px;
+    height: 50%;
     cursor: pointer;
     background-color: orange;
+    border-radius: 50px;
     color: white;
 }
 .section7-part3 {
@@ -789,13 +797,14 @@ footer {
 .footer-parts {
     /* border: 1px solid white; */
     padding: 10px 10px;
-    width: 100%;
+    width: 85%;
     height: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
     gap: 5px; 
+    border-bottom: 1px solid white;
 
 }
 
