--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
     /* border: none; */
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
+
 html, body {
     width: 100vw;
     min-height: 100vh;
@@ -718,6 +724,7 @@ nav {
     font-size: larger;
     background-color: orange;
     color: white;
+    cursor: pointer;
 }
 
 .section-8-part2 {
