--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    /* border: none; */
+    /* border: 1px solid white; */
 }
 
 a {
@@ -25,7 +25,7 @@ html, body {
 
 .wrapper {
     padding: 5px 5px;
-    /* border: 1px dashed red; */
+    border: 1px dashed red;
     width: 90%;
     min-height: 100%;
      display: flex;
@@ -39,7 +39,7 @@ html, body {
 }
 
 nav {
-    /* border: 1px dashed black; */
+    border: 1px dashed black;
     width: 90%;
     height: 7%;
     display: flex;
@@ -76,7 +76,7 @@ nav {
 }
 
 .main-container {
-    /* border: 1px dashed black; */
+    border: 1px dashed black;
     width: 100%;
     min-height: 80%;
     display: flex;
@@ -90,7 +90,7 @@ nav {
 .mainContainer-Section {
 
     /* flex-wrap: wrap; */
-    /* border: 1px solid green; */
+    border: 1px solid green;
     width: 100%;
     height: 300px;
     display: flex;
@@ -128,7 +128,7 @@ nav {
 
 .hireme-section1 {
     position: absolute;
-    /* border: 3px dashed red; */
+    border: 3px dashed red;
     width: 250px;
     height: 50px;
     bottom: 50px;
@@ -222,7 +222,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     flex-direction: row;
-    /* border: 1px solid black; */
+    border: 1px solid black;
     height: 70%;
     width: 100%;
     
@@ -231,7 +231,7 @@ nav {
 .section2-box {
     width: 20%;
     height: 100%;
-    /* border: 1px solid black; */
+    border: 1px solid black;
     
 }
 
@@ -258,7 +258,7 @@ nav {
     flex-direction: row;
 }
 
-/* .section3-part1 {
+.section3-part1 {
     border: 1px solid black;
 }
 
@@ -270,7 +270,7 @@ nav {
 
 .section3-part3 {
     border: 1px solid black;
-} */
+}
 
 .section3-parts{
     width: 35%;
@@ -296,7 +296,7 @@ nav {
 .section3-part2-box {
     width: 20px;
     height: 20px;
-    /* border: 1px solid black; */
+    border: 1px solid black;
     border-radius: 100%;
     background-color: black;
     padding: 5px 5px;
@@ -356,7 +356,7 @@ nav {
 .section4-parts {
     width: 30%;
     height: 80%;
-    /* border: 1px solid black; */
+    border: 1px solid black;
 }
 
 .section4-image {
@@ -406,7 +406,7 @@ nav {
 } 
 
 .section5-part1 {
-    /* border: 1px solid black; */
+    border: 1px solid black;
     width: 70%;
     height: 100%;
     display: flex;
@@ -444,7 +444,7 @@ nav {
 .section5-part3 {
     width: 20%;
     height: 20px;
-    /* border: 1px solid black; */
+    border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -497,7 +497,7 @@ nav {
 }
 
 .section5-part4-project-list {
-    /* border: 1px solid black; */
+    border: 1px solid black;
     width: 80%;
     list-style: none;
     display: flex;
@@ -625,7 +625,7 @@ nav {
 }
 
 .section7-part2 {
-    /* border: 1px solid black; */
+    border: 1px solid black;
     border: none;
     padding: 5px 5px;
     border-radius: 50px;
@@ -802,7 +802,7 @@ footer {
 }
 
 .footer-parts {
-    /* border: 1px solid white; */
+    border: 1px solid white;
     padding: 10px 10px;
     width: 85%;
     height: 30%;
@@ -842,7 +842,7 @@ footer {
 
 .mdediaConnect-lists {
     width: 70%;
-    /* border: 1px solid white; */
+    border: 1px solid white;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -876,7 +876,7 @@ footer {
 
 
 .fC-box {
-    /* border: 1px solid white; */
+    border: 1px solid white;
     height: 100%;
 
 }
