--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ nav {
     width: 100%;
     min-height: 300px;
     display: flex;
+    flex-grow: 1;
     justify-content: center;
     align-items: center;
 
@@ -351,7 +352,7 @@ nav {
 /* Main container for section 2 items (service boxes) */
 .section2-part2 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: stretch; /* Ensures child boxes stretch vertically */
     flex-direction: row;
     gap: 15px;  /* Adds consistent gap between the boxes */
@@ -363,17 +364,17 @@ nav {
 
 /* Each individual service box */
 .section2-box {
-    width: 15%;
+    width: 20%;
     height: 100%; /* Ensure each box takes up full height of section2-part2 */
     background-color: #f4f4f4;  /* Light background for each box */
-    padding: 20px;
+    padding: 5px;
     border-radius: 8px; /* Rounded corners for a more modern look */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  /* Slight shadow for depth */
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    flex-grow: 1;
+    /* flex-grow: 1; */
      /* Allow the box to grow and fill available space */
         gap: 20px;
     }
@@ -440,7 +441,7 @@ nav {
 }
 
 .section3-parts{
-    width: 35%;
+    width: 25%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -917,11 +918,12 @@ nav {
 
 .section-6 {
     width: 100%;
-    height: 100%;
+    height: 600px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    flex-grow: 1;
 
 }
 
@@ -933,27 +935,27 @@ nav {
 }
 
 .section6-paragraphs {
-    width: 70%;
+    max-width: 600px; 
     height: auto;
     text-align: center;
 }
 
 .section6-imageContainer {
     width: 100%;
-    height: 300px;
+    min-height: 300px;
     /* background-image: url("./section7-testimonials.png");
     background-repeat: repeat-x;
     background-position: center; */
-     background-image: url('./image_assets/section6-testimonials.png');
-    background-repeat: repeat-x;  
+     background-image: url('./image_assets/Skills.png');
+    background-repeat: no-repeat;  
     background-position: center;   
     /* height: 100px;       */
 }
 
 .section6-tetimonials {
     display: none;
-    height: 50px;
-    width: 70px;
+    height: 100%;
+    width: 100%;
     /* width: 100%;
     height: 100%;
      background-repeat: repeat-x;  /* This makes the image repeat horizontally */
