--- a/style.css
+++ b/style.css
@@ -918,7 +918,7 @@ nav {
 
 .section-6 {
     width: 100%;
-    height: 600px;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -942,13 +942,13 @@ nav {
 
 .section6-imageContainer {
     width: 100%;
-    min-height: 300px;
+    min-height: 200px;
     /* background-image: url("./section7-testimonials.png");
     background-repeat: repeat-x;
     background-position: center; */
-     background-image: url('./image_assets/Skills.png');
+     /* background-image: url('./image_assets/Skills.png');
     background-repeat: no-repeat;  
-    background-position: center;   
+    background-position: center;    */
     /* height: 100px;       */
 }
 
